# feishu-personalization

./: .env  .env.example  .gitignore  Trader个性化榜单提示词.txt  bot.py  debug_extract.py  debug_titles.py  extract.py  gather.py  langgraph.json  llm.py  pyproject.toml  requirements.txt  source_type.py  配置信息汇总.md  飞哥个性化提示词.txt
agent/: __init__.py  agent.py  config.py  feishu.py  pipeline.py  prompts.py
agent/data/新闻文件/: 新闻榜单_2026-03-11.md
agent/prompts/: system_prompt.md
agent/scrapers/: __init__.py  cls.py  cls_morning.py  config.py  eastmoney_news.py  filters.py  formatter.py  futu.py  jin10.py  jin10_breakfast.py  main.py
agent/tools/: __init__.py  classify_titles.py  create_feishu_doc.py  create_spreadsheet.py  export_data.py  extract_urls.py  fetch_messages.py  fetch_url_content.py  refine_keywords.py  send_message.py  web_search.py
exports/: 2026-03-04_oc_ffa82395e78cff1fb14799bbbd7302c2.json  2026-03-05_oc_ffa82395e78cff1fb14799bbbd7302c2.json  2026-03-05_oc_ffa82395e78cff1fb14799bbbd7302c2.xlsx  2026-03-06_oc_ffa82395e78cff1fb14799bbbd7302c2.json  2026-03-07_oc_ffa82395e78cff1fb14799bbbd7302c2.json  2026-03-07_oc_ffa82395e78cff1fb14799bbbd7302c2.xlsx
prompts/: README.md  output_format.md  system_prompt.md
prompts/profiles/: feige.md  trader.md
tests/: test_bot_and_config.py  test_edge_cases.py  test_markdown_to_blocks.py  test_pipeline.py  test_scrapers.py
